--- a/notebooks/metadata.ipynb
+++ b/notebooks/metadata.ipynb
@@ -7,7 +7,16 @@
     "# Project Psyched: A Closer Look Into Reproducibility In Psychological Research\n",
     "\n",
     "## Metadata Mining Script\n",
-    "This script is set up for ProQuest TDM Studio's corpus of Psychology texts."
+    "This script is set up for ProQuest TDM Studio's corpus of Psychology texts.\n",
+    "\n",
+    "Author: Yuyang Zhong (2020). This work is licensed under a [Creative Commons BY-NC-SA 4.0 International\n",
+    "License][cc-by].\n",
+    "\n",
+    "[![CC BY 4.0][cc-by-shield]\n",
+    "\n",
+    "[cc-by]: http://creativecommons.org/licenses/by/4.0/\n",
+    "[cc-by-image]: https://i.creativecommons.org/l/by/4.0/88x31.png\n",
+    "[cc-by-shield]: https://img.shields.io/badge/license-CC--BY--NC--SA%204.0-blue"
    ]
   },
   {
