--- a/notebooks/metadata.ipynb
+++ b/notebooks/metadata.ipynb
@@ -12,10 +12,9 @@
     "Author: Yuyang Zhong (2020). This work is licensed under a [Creative Commons BY-NC-SA 4.0 International\n",
     "License][cc-by].\n",
     "\n",
-    "[![CC BY 4.0][cc-by-shield]\n",
+    "![CC BY-NC-SA 4.0][cc-by-shield]\n",
     "\n",
     "[cc-by]: http://creativecommons.org/licenses/by/4.0/\n",
-    "[cc-by-image]: https://i.creativecommons.org/l/by/4.0/88x31.png\n",
     "[cc-by-shield]: https://img.shields.io/badge/license-CC--BY--NC--SA%204.0-blue"
    ]
   },
