--- a/notebooks/script.ipynb
+++ b/notebooks/script.ipynb
@@ -6,9 +6,24 @@
    "source": [
     "# Project Psyched: A Closer Look Into Reproducibility In Psychological Research\n",
     "\n",
-    "## Metadata Mining Script\n",
-    "This script is set up for ProQuest TDM Studio's corpus of Psychology texts."
+    "## Full Text Mining Script\n",
+    "This script is set up for ProQuest TDM Studio's corpus of Psychology texts.\n",
+    "\n",
+    "Author: Yuyang Zhong (2020). This work is licensed under a [Creative Commons BY-NC-SA 4.0 International\n",
+    "License][cc-by].\n",
+    "\n",
+    "![CC BY-NC-SA 4.0][cc-by-shield]\n",
+    "\n",
+    "[cc-by]: http://creativecommons.org/licenses/by/4.0/\n",
+    "[cc-by-shield]: https://img.shields.io/badge/license-CC--BY--NC--SA%204.0-blue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
