--- a/notebooks/script.ipynb
+++ b/notebooks/script.ipynb
@@ -27,18 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
        "['1554207703.txt', '1011297999.txt', '1509629602.txt']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +160,26 @@
     "        \n",
     "        \n",
     "        ##### Capture Research Statistics #####\n",
+    "        raw_text = root.find('TextInfo').find('PreformattedData').find('PsycArticles').text\n",
+    "        \n",
+    "        ## strip HTML tags\n",
+    "        raw_text = re.sub(r'<[^>]*>', '', raw_text)\n",
+    "        \n",
+    "        ## remove nextline character\n",
+    "        raw_text = re.sub(r'\\n\\s*', '   ', raw_text)\n",
+    "        \n",
+    "        ## Replace HTML named symbols \n",
+    "        html_symbols = {\n",
+    "            \"&\": r'&amp;',\n",
+    "            '\"': r'&quot;',\n",
+    "            \"'\": r'&apos;',\n",
+    "            \">\": r'&gt;',\n",
+    "            \"<\": r'&lt;',\n",
+    "        }\n",
+    "        for i in iter(html_symbols):\n",
+    "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
+    "        \n",
+    "        data[f]['P-Values'] = re.findall(r'p\\s*[\\<|\\>|\\=]\\s*(\\d*\\.\\d+)', raw_text)\n",
     "        \n",
     "        \n",
     "        ##### Capture Reproducibility Practices #####\n",
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
