Handling exceptions for metadata

--- a/notebooks/script.ipynb
+++ b/notebooks/script.ipynb
@@ -143,24 +143,39 @@
     "        data[f]['Methodology'] = methodology\n",
     "        \n",
     "        ## Number of References\n",
-    "        data[f]['References'] = root.find('Obj').find('DocFeatures').find('NumRefsAtt').find('NumRefs').text\n",
+    "        try: \n",
+    "            data[f]['References'] = root.find('Obj').find('DocFeatures').find('NumRefsAtt').find('NumRefs').text\n",
+    "        except AttributeError:\n",
+    "            data[f]['References'] = ''\n",
     "        \n",
     "        ## Journal\n",
     "        data[f]['Journal'] = root.find('PublicationInfo').find('PublicationTitleAtt'\n",
     "                                                                   ).find('PublicationTitle').text\n",
     "        \n",
     "        ## Volume\n",
-    "        data[f]['Volume'] = root.find('PublicationInfo').find('Volume').text\n",
+    "        try:\n",
+    "            data[f]['Volume'] = root.find('PublicationInfo').find('Volume').text\n",
+    "        except AttributeError:\n",
+    "            data[f]['Volume'] = ''\n",
     "        \n",
     "        ## Issue\n",
-    "        data[f]['Issue'] = root.find('PublicationInfo').find('Issue').text\n",
+    "        try:\n",
+    "            data[f]['Issue'] = root.find('PublicationInfo').find('Issue').text\n",
+    "        except AttributeError:\n",
+    "            data[f]['Issue'] = ''\n",
     "        \n",
     "        ## Pages\n",
-    "        data[f]['Pages'] = root.find('Obj').find('PrintLocation').find('Pagination').text\n",
+    "        try:\n",
+    "            data[f]['Pages'] = root.find('Obj').find('PrintLocation').find('Pagination').text\n",
+    "        except AttributeError:\n",
+    "            data[f]['Pages'] = ''\n",
     "        \n",
     "        \n",
     "        ##### Capture Research Statistics #####\n",
-    "        raw_text = root.find('TextInfo').find('PreformattedData').find('PsycArticles').text\n",
+    "        try:\n",
+    "            raw_text = root.find('TextInfo').find('PreformattedData').find('PsycArticles').text\n",
+    "        except AttributeError:\n",
+    "            raw_text = ''\n",
     "        \n",
     "        ## strip HTML tags\n",
     "        raw_text = re.sub(r'<[^>]*>', '', raw_text)\n",
