small modifications for script, include inequalities

--- a/notebooks/analysis_viz_JPSP.ipynb
+++ b/notebooks/analysis_viz_JPSP.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,25 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read file\n",
-    "with open(in_path + in_name, 'r') as f:\n",
-    "    data = f.read()\n",
-    "\n",
-    "# parse file\n",
-    "data = json.loads(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame.from_dict(data, orient='index')"
+    "df = pd.read_json(in_path + in_name, orient='index')"
    ]
   },
   {
