--- a/notebooks/script.ipynb
+++ b/notebooks/script.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "['1554207703.txt', '1011297999.txt', '1509629602.txt']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,8 @@
     "        for i in iter(html_symbols):\n",
     "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
     "        \n",
-    "        data[f]['P-Values'] = re.findall(r'p\\s*[\\<|\\>|\\=]\\s*(\\d*\\.\\d+)', raw_text)\n",
+    "        data[f]['P-Values'] = re.findall(r'p\\s*[\\<|\\>|\\=]\\s*(\\d?\\.\\d+)', raw_text)\n",
+    "        data[f]['Inequalities'] = re.findall(r'p\\s*([\\<|\\>|\\=])\\s*\\d*\\.\\d+', raw_text)\n",
     "        \n",
     "        \n",
     "        ##### Capture Reproducibility Practices #####\n",
@@ -207,12 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "capture(in_path, out_path, 'samples')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
