completed part 2 script + visualization

--- a/notebooks/analysis_viz_JPSP_part1.ipynb
+++ b/notebooks/analysis_viz_JPSP_part1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Project Psyched: A Closer Look Into Reproducibility In Psychological Research\n",
     "\n",
-    "## Data Analysis & Visualization Script\n",
+    "## Data Analysis & Visualization Script: Part 1 - P-value Trends\n",
     "This script for data analysis and visualization after data has been scraped from TDM Studio.\n",
     "\n",
     "Author: Yuyang Zhong (2020). This work is licensed under a [Creative Commons BY-NC-SA 4.0 International\n",
