add small heading for t-test correction

--- a/notebooks/analysis_viz_JPSP_part2.ipynb
+++ b/notebooks/analysis_viz_JPSP_part2.ipynb
@@ -664,6 +664,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Naive correction for one- and two-tail t-test p-values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
