--- a/notebooks/script_part1.ipynb
+++ b/notebooks/script_part1.ipynb
@@ -194,7 +194,9 @@
     "        for i in iter(html_symbols):\n",
     "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
     "        \n",
-    "        data[f]['P-Values'] = re.findall(r'p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)', raw_text)\n",
+    "        data[f]['P-Values'] = re.findall(r'p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!.\\D)', raw_text)\n",
+    "        data[f]['P-Values-SN'] = re.findall(r'p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+', raw_text)\n",
+    "        \n",
     "#         data[f]['Inequalities'] = re.findall(r'p\\s*([\\<|\\>|\\=])\\s*\\d*\\.\\d+', raw_text)\n",
     "        \n",
     "        \n",
