minor updates to regex

--- a/notebooks/script_part2.ipynb
+++ b/notebooks/script_part2.ipynb
@@ -121,16 +121,17 @@
     "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
     "           \n",
     "        ## F Statistics ##\n",
-    "        data[f]['F_stats'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!.\\D)', \n",
+    "        data[f]['F_stats'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!e)', \n",
     "                                        raw_text)\n",
-    "        data[f]['F_stats_SN'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+', \n",
+    "        data[f]['F_stats_SN'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+)', \n",
     "                                        raw_text)\n",
     "        data[f]['F_stats_ns'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*n\\.?s\\.?', \n",
     "                                           raw_text)\n",
     "        \n",
-    "        data[f]['t_scores'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!.\\D)',\n",
+    "        ## t score ##\n",
+    "        data[f]['t_scores'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!e)',\n",
     "                                         raw_text)\n",
-    "        data[f]['t_scores_SN'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+',\n",
+    "        data[f]['t_scores_SN'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+)',\n",
     "                                         raw_text)\n",
     "        data[f]['t_scores_ns'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*n\\.?s\\.?',\n",
     "                                            raw_text)\n",
