--- a/notebooks/script_part1.ipynb
+++ b/notebooks/script_part1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,10 +194,8 @@
     "        for i in iter(html_symbols):\n",
     "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
     "        \n",
-    "        data[f]['P-Values'] = re.findall(r'p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!.\\D)', raw_text)\n",
-    "        data[f]['P-Values-SN'] = re.findall(r'p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+', raw_text)\n",
-    "        \n",
-    "#         data[f]['Inequalities'] = re.findall(r'p\\s*([\\<|\\>|\\=])\\s*\\d*\\.\\d+', raw_text)\n",
+    "        data[f]['P-Values'] = re.findall(r'p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!e)', raw_text)\n",
+    "        data[f]['P-Values-SN'] = re.findall(r'p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+)', raw_text)\n",
     "        \n",
     "        \n",
     "    ##### Write Output #####\n",
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
