--- a/notebooks/script_part2.ipynb
+++ b/notebooks/script_part2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "['1554207703.txt', '1011297999.txt', '1509629602.txt']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "            raw_text = re.sub(html_symbols[i], i, raw_text)\n",
     "           \n",
     "        ## F Statistics ##\n",
-    "        data[f]['F_stats'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!e)', \n",
+    "        data[f]['F_stats'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+(?!e)', \n",
     "                                        raw_text)\n",
     "        data[f]['F_stats_SN'] = re.findall(r'Fs?\\s*\\(\\s*\\d+\\s*\\,\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*\\d*\\.?\\d*\\s*\\,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+)', \n",
     "                                        raw_text)\n",
@@ -129,7 +129,7 @@
     "                                           raw_text)\n",
     "        \n",
     "        ## t score ##\n",
-    "        data[f]['t_scores'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+)(?!e)',\n",
+    "        data[f]['t_scores'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*[\\<|\\>|\\=]\\s*\\d?\\.\\d+(?!e)',\n",
     "                                         raw_text)\n",
     "        data[f]['t_scores_SN'] = re.findall(r't\\s*\\(\\s*\\d*\\s*,?\\s*\\d+\\s*\\)\\s*[\\<|\\>|\\=]\\s*[\\−|\\-]?\\s*\\d*\\.?\\d*\\s*,\\s*p\\s*([\\<|\\>|\\=]\\s*\\d?\\.\\d+\\s*e[\\−|\\-]?\\d+)',\n",
     "                                         raw_text)\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
