refresh metadata file

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -505,6 +505,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2388986342.xml</th>\n",
+       "      <td>The trainer matters: Cross-classified models o...</td>\n",
+       "      <td>2020-04-13</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10.1037/apl0000503</td>\n",
+       "      <td>['Glerum, David R.', 'Joseph, Dana L.', 'McKen...</td>\n",
+       "      <td>['training evaluation', 'training effectivenes...</td>\n",
+       "      <td>['Empirical Study', 'Quantitative Study']</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>Journal of Applied Psychology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1266149906.xml</th>\n",
+       "      <td>Psychology is still a problematic science and ...</td>\n",
+       "      <td>2012-12-01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10.1037/a0030084</td>\n",
+       "      <td>['Teo, Thomas']</td>\n",
+       "      <td>['bias', 'misconceptions', 'psychology', 'psyc...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>American Psychologist</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>807-808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614504953.xml</th>\n",
+       "      <td>Achieving a new dimension: Children integrate ...</td>\n",
+       "      <td>2009-05-01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10.1037/a0014616</td>\n",
+       "      <td>['Ebersbach, Mirjam']</td>\n",
+       "      <td>['information integration', 'volume', 'intuiti...</td>\n",
+       "      <td>['Empirical Study', 'Quantitative Study']</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>Developmental Psychology</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>877-883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1620027748.xml</th>\n",
+       "      <td>The impact of time at work and time off from w...</td>\n",
+       "      <td>2015-05-01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10.1037/a0038067</td>\n",
+       "      <td>['Dai, Hengchen', 'Milkman, Katherine L.', 'Ho...</td>\n",
+       "      <td>['fatigue', 'workplace compliance', 'job deman...</td>\n",
+       "      <td>['Empirical Study', 'Longitudinal Study', 'Qua...</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>Journal of Applied Psychology</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>846-862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>614340287.xml</th>\n",
        "      <td>Some aspects of the executive personality\\n</td>\n",
        "      <td>1955-10-01</td>\n",
@@ -519,121 +579,61 @@
        "      <td>5</td>\n",
        "      <td>348-353</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614436904.xml</th>\n",
-       "      <td>Review of\\n&lt;i&gt;Work and effort: The psychology ...</td>\n",
-       "      <td>1948-06-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10.1037/h0049493</td>\n",
-       "      <td>['Thompson, Albert S.']</td>\n",
-       "      <td>['psychology of production', 'experimental ind...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Journal of Applied Psychology</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>328-330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614288857.xml</th>\n",
-       "      <td>Statistically significant differences in obser...</td>\n",
-       "      <td>1940-12-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10.1037/h0054774</td>\n",
-       "      <td>['Daniel, Cuthbert']</td>\n",
-       "      <td>['tables', 'percentage', 'groups', 'statistics']</td>\n",
-       "      <td>['Empirical Study', 'Quantitative Study']</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Journal of Applied Psychology</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>826-830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614537584.xml</th>\n",
-       "      <td>Supplement to listing of APA-accredited doctor...</td>\n",
-       "      <td>1989-07-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10.1037/h0091921</td>\n",
-       "      <td>['No authorship indicated']</td>\n",
-       "      <td>['APA-Accredited Doctoral Programs', 'Predocto...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>American Psychologist</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1071-1072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614356916.xml</th>\n",
-       "      <td>Mental health care in the USSR\\n</td>\n",
-       "      <td>1977-05-01</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10.1037/0003-066X.32.5.376</td>\n",
-       "      <td>['Bieliauskas, Vytautas J.']</td>\n",
-       "      <td>['mental health care, USSR']</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>American Psychologist</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>376-379</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                           Title  \\\n",
-       "614340287.xml        Some aspects of the executive personality\\n   \n",
-       "614436904.xml  Review of\\n<i>Work and effort: The psychology ...   \n",
-       "614288857.xml  Statistically significant differences in obser...   \n",
-       "614537584.xml  Supplement to listing of APA-accredited doctor...   \n",
-       "614356916.xml                   Mental health care in the USSR\\n   \n",
+       "                                                            Title  \\\n",
+       "2388986342.xml  The trainer matters: Cross-classified models o...   \n",
+       "1266149906.xml  Psychology is still a problematic science and ...   \n",
+       "614504953.xml   Achieving a new dimension: Children integrate ...   \n",
+       "1620027748.xml  The impact of time at work and time off from w...   \n",
+       "614340287.xml         Some aspects of the executive personality\\n   \n",
        "\n",
-       "              Date Published  Peer Review                         DOI  \\\n",
-       "614340287.xml     1955-10-01         True            10.1037/h0045488   \n",
-       "614436904.xml     1948-06-01         True            10.1037/h0049493   \n",
-       "614288857.xml     1940-12-01         True            10.1037/h0054774   \n",
-       "614537584.xml     1989-07-01         True            10.1037/h0091921   \n",
-       "614356916.xml     1977-05-01         True  10.1037/0003-066X.32.5.376   \n",
+       "               Date Published  Peer Review                 DOI  \\\n",
+       "2388986342.xml     2020-04-13         True  10.1037/apl0000503   \n",
+       "1266149906.xml     2012-12-01         True    10.1037/a0030084   \n",
+       "614504953.xml      2009-05-01         True    10.1037/a0014616   \n",
+       "1620027748.xml     2015-05-01         True    10.1037/a0038067   \n",
+       "614340287.xml      1955-10-01         True    10.1037/h0045488   \n",
        "\n",
-       "                                              Author  \\\n",
-       "614340287.xml  ['Miner, John B.', 'Culver, John E.']   \n",
-       "614436904.xml                ['Thompson, Albert S.']   \n",
-       "614288857.xml                   ['Daniel, Cuthbert']   \n",
-       "614537584.xml            ['No authorship indicated']   \n",
-       "614356916.xml           ['Bieliauskas, Vytautas J.']   \n",
+       "                                                           Author  \\\n",
+       "2388986342.xml  ['Glerum, David R.', 'Joseph, Dana L.', 'McKen...   \n",
+       "1266149906.xml                                    ['Teo, Thomas']   \n",
+       "614504953.xml                               ['Ebersbach, Mirjam']   \n",
+       "1620027748.xml  ['Dai, Hengchen', 'Milkman, Katherine L.', 'Ho...   \n",
+       "614340287.xml               ['Miner, John B.', 'Culver, John E.']   \n",
        "\n",
-       "                                                        Keywords  \\\n",
-       "614340287.xml                          ['executive personality']   \n",
-       "614436904.xml  ['psychology of production', 'experimental ind...   \n",
-       "614288857.xml   ['tables', 'percentage', 'groups', 'statistics']   \n",
-       "614537584.xml  ['APA-Accredited Doctoral Programs', 'Predocto...   \n",
-       "614356916.xml                       ['mental health care, USSR']   \n",
+       "                                                         Keywords  \\\n",
+       "2388986342.xml  ['training evaluation', 'training effectivenes...   \n",
+       "1266149906.xml  ['bias', 'misconceptions', 'psychology', 'psyc...   \n",
+       "614504953.xml   ['information integration', 'volume', 'intuiti...   \n",
+       "1620027748.xml  ['fatigue', 'workplace compliance', 'job deman...   \n",
+       "614340287.xml                           ['executive personality']   \n",
        "\n",
-       "                                             Methodology  References  \\\n",
-       "614340287.xml  ['Empirical Study', 'Quantitative Study']         8.0   \n",
-       "614436904.xml                                         []         NaN   \n",
-       "614288857.xml  ['Empirical Study', 'Quantitative Study']         NaN   \n",
-       "614537584.xml                                         []         NaN   \n",
-       "614356916.xml                                         []        14.0   \n",
+       "                                                      Methodology  References  \\\n",
+       "2388986342.xml          ['Empirical Study', 'Quantitative Study']       126.0   \n",
+       "1266149906.xml                                                 []         9.0   \n",
+       "614504953.xml           ['Empirical Study', 'Quantitative Study']        37.0   \n",
+       "1620027748.xml  ['Empirical Study', 'Longitudinal Study', 'Qua...        77.0   \n",
+       "614340287.xml           ['Empirical Study', 'Quantitative Study']         8.0   \n",
        "\n",
-       "                                     Journal  Volume Issue      Pages  \n",
-       "614340287.xml  Journal of Applied Psychology    39.0     5    348-353  \n",
-       "614436904.xml  Journal of Applied Psychology    32.0     3    328-330  \n",
-       "614288857.xml  Journal of Applied Psychology    24.0     6    826-830  \n",
-       "614537584.xml          American Psychologist    44.0     7  1071-1072  \n",
-       "614356916.xml          American Psychologist    32.0     5    376-379  "
+       "                                      Journal  Volume Issue    Pages  \n",
+       "2388986342.xml  Journal of Applied Psychology     NaN   NaN      NaN  \n",
+       "1266149906.xml          American Psychologist    67.0     9  807-808  \n",
+       "614504953.xml        Developmental Psychology    45.0     3  877-883  \n",
+       "1620027748.xml  Journal of Applied Psychology   100.0     3  846-862  \n",
+       "614340287.xml   Journal of Applied Psychology    39.0     5  348-353  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpus2_path_meta = 'corpus2_metadata_full.csv'\n",
+    "corpus2_path_meta = 'corpus2_metadata.csv'\n",
     "\n",
     "corpus2_meta_only = pd.read_csv(in_path + corpus2_path_meta, index_col=0)\n",
     "corpus2_meta_only = corpus2_meta_only.drop('Full Text', axis=1)\n",
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "614304222.xml    994-1005  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
